src/partials/_topNav.scss
@use "./variables" as *;

.topNav {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  padding: 30px 50px;
  color: $senary;

  a,
  button,
  li {
    color: $senary;
    font-size: $bodyLarge;
    transition: 0.3s all ease-in-out;

    &:hover,
    &:focus-visible {
      color: $secondary;
    }
  }

  .links {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 65%;
  }

  ul {
    display: flex;
    justify-content: space-between;
    padding: 0;
    margin: 0;
    width: 45%;

    li {
      padding: 5px;
      position: relative;

      button {
        background-color: transparent;
        border: none;
        font-family: $sans;
        cursor: pointer;
      }
    }
  }

  .pagesDropDown {
    position: absolute;
    top: 40px;
    display: flex;
    flex-direction: column;
    width: 150px;
    background-color: $secondary;
    border-radius: 10px;

    li {
      padding: 15px 20px;

      &:hover,
      &:focus-visible {
        background-color: $senary;

        a {
          color: $secondary;
        }
      }

      &:nth-of-type(1) {
        border-radius: 10px 10px 0 0;
      }

      &:nth-of-type(5) {
        border-radius: 0 0 10px 10px;
      }
    }
  }
}

.errorHeader {
  .topNav {
    .logo,
    a,
    button {
      color: $quaternary;

      &:hover {
        color: $quinary;
      }
    }

    .candidateBtn {
      border-color: $quaternary;

      &:hover,
      &:focus-visible {
        background-color: $secondary;
        border-color: $secondary;

        a {
          color: $senary;
        }
      }
    }

    .employerBtn {
      &:hover,
      &:focus-visible {
        border-color: $secondary;
      }
    }
  }
}

